# supersonic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  configure.ac
cmake/Modules/: InstallHeaders.cmake
supersonic/base/exception/: exception.h  exception_macros.h  exception_test.cc  result.h  result_test.cc
supersonic/base/infrastructure/: aggregation_operators.h  aggregation_operators_test.cc  bit_pointers.cc  bit_pointers.h  bit_pointers_test.cc  block.cc  block.h  block_test.cc  copy_column.cc  copy_column_test.cc  hasher.h  operators.h  operators_test.cc  projector.cc  projector.h  projector_test.cc  tuple_schema.cc  tuple_schema.h  tuple_schema_test.cc  types.cc  types.h  types_infrastructure.cc  types_infrastructure.h  types_infrastructure_test.cc  variant.h  variant_pointer.h  view_copier.cc  view_copier_test.cc
supersonic/base/memory/: .memory.h.swp  arena.cc  arena.h  memory.cc  memory.h  memory_mocks.cc  memory_mocks.h  memory_test.cc
supersonic/benchmark/dot/: dot_drawer.cc  dot_drawer.h  dot_drawer_test.cc
supersonic/benchmark/examples/: common_utils.cc  common_utils.h  operation_example.cc
supersonic/benchmark/infrastructure/: benchmark_listener.cc  benchmark_listener.h  benchmark_listener_mock.h  benchmark_listener_test.cc  benchmark_transformer.cc  benchmark_transformer.h  benchmark_transformer_test.cc  cursor_statistics.cc  cursor_statistics.h  node.cc  node.h  node_test.cc  tree_builder.cc  tree_builder.h
supersonic/benchmark/manager/: benchmark_manager.cc  benchmark_manager.h  benchmark_manager_test.cc
supersonic/benchmark/proto/: benchmark.proto
supersonic/cursor/base/: cursor.h  cursor_transformer.h  lookup_index.h  lookup_index_test.cc  operation.h
supersonic/cursor/core/: aggregate.h  aggregate_clusters.cc  aggregate_clusters_test.cc  aggregate_groups.cc  aggregate_groups_test.cc  aggregate_scalar.cc  aggregate_scalar_test.cc  aggregator.cc  aggregator.h  benchmarks.cc  benchmarks.h  coalesce.cc  coalesce.h  coalesce_test.cc  column_aggregator.cc  column_aggregator.h  column_aggregator_test.cc  compute.cc  compute.h  compute_test.cc  filter.cc  filter.h  filter_test.cc  foreign_filter.cc  foreign_filter.h  foreign_filter_test.cc  generate.cc  generate.h  generate_test.cc  hash_join.cc  hash_join.h  hash_join_test.cc  hybrid_aggregate_large_test.cc  hybrid_aggregate_test.cc  hybrid_group_utils.cc  hybrid_group_utils.h  hybrid_group_utils_test.cc  limit.cc  limit.h  limit_test.cc  (+23 more)
supersonic/cursor/infrastructure/: basic_cursor.h  basic_operation.h  basic_operation_test.cc  file_io.cc  file_io.h  history_transformer.h  iterators.cc  iterators.h  iterators_test.cc  ordering.cc  ordering.h  row.h  row_copier.h  row_copier_test.cc  row_hash_set.cc  row_hash_set.h  row_hash_set_test.cc  row_test.cc  table.cc  table.h  table_test.cc  view_cursor.cc  view_cursor.h  view_cursor_test.cc  view_printer.cc  view_printer.h  writer.cc  writer.h  writer_test.cc
supersonic/cursor/proto/: cursors.proto
supersonic/expression/base/: expression.cc  expression.h
supersonic/expression/core/: arithmetic_bound_expressions.cc  arithmetic_bound_expressions.h  arithmetic_expressions.cc  arithmetic_expressions.h  case_expression_test.cc  comparison_bound_expressions.cc  comparison_bound_expressions.h  comparison_bound_expressions_test.cc  comparison_expressions.cc  comparison_expressions.h  date_bound_expressions.cc  date_bound_expressions.h  date_evaluators.cc  date_evaluators.h  date_expressions.cc  date_expressions.h  date_expressions_test.cc  elementary_bound_expressions.cc  elementary_bound_expressions.h  elementary_bound_expressions_test.cc  elementary_expressions.cc  elementary_expressions.h  elementary_expressions_test.cc  math_bound_expressions.cc  math_bound_expressions.h  math_evaluators.h  math_expressions.cc  math_expressions.h  math_expressions_test.cc  projecting_bound_expressions.cc  projecting_bound_expressions.h  projecting_bound_expressions_test.cc  projecting_expressions.cc  projecting_expressions.h  projecting_expressions_test.cc  regexp_bound_expressions.cc  regexp_bound_expressions.h  regexp_bound_expressions_internal.h  regexp_bound_expressions_test.cc  regexp_evaluators.h  (+15 more)
supersonic/expression/infrastructure/: basic_bound_expression.cc  basic_bound_expression.h  basic_bound_expression_test.cc  basic_expressions.cc  basic_expressions.h  bound_expression_creators.h  elementary_const_expressions.h  expression_utils.cc  expression_utils.h  expression_utils_test.cc  terminal_bound_expressions.cc  terminal_bound_expressions.h  terminal_expressions.cc  terminal_expressions.h  terminal_expressions_test.cc
supersonic/expression/proto/: operators.proto
supersonic/expression/templated/: abstract_bound_expressions.h  abstract_expressions.h  bound_expression_factory.cc  bound_expression_factory.h  cast_bound_expression.cc  cast_bound_expression.h  cast_bound_expression_test.cc  cast_expression.cc  cast_expression.h  cast_expression_test.cc
supersonic/expression/vector/: binary_column_computers.h  expression_traits.h  (+12 more)
supersonic/proto/: specification.proto  supersonic.proto
supersonic/serialization/: build_expression_from_proto.cc
supersonic/testing/: block_builder.cc  block_builder.h  comparable_cursor.cc  comparable_cursor.h  comparable_tuple_schema.cc  comparable_view.cc  comparable_view.h  expression_test_helper.cc  expression_test_helper.h  operation_testing.cc  operation_testing.h  repeating_block.cc  repeating_block.h  row.h  short_circuit_tester.cc  short_circuit_tester.h  view_comparator.cc  view_comparator.h
supersonic/utils/: algorithm.h  bits.cc  bits.h  casts.h  charmap.h  container_literal.h  container_logging.h  cycleclock-inl.h  demangle.cc  endian.h  file.cc  file.h  file_util.cc  fixedarray.h  functional.h  int128.cc  int128.h  integral_types.h  iterator_adaptors.h  linked_ptr.h  macros.h  manual_constructor.h  map_util.h  mathlimits.h  pointer_vector.h  port.h  random.cc  random.h  sparsetable.h  std_namespace.h  stl_util.h  stringprintf.cc  stringprintf.h  strtoint.cc  strtoint.h  timer.h  walltime.cc  walltime.h
(+42 files in other folders)
